# zencoded

./: .env.example  .gitignore  CLAUDE.md  README.md  extract.py  main.py  mise.toml  pyproject.toml
docs/: SECURITY.md
src/zencoded/: __init__.py  cli.py  config.py  decoder.py  downloader.py  encoder.py  jobs.py  publisher.py  releaser.py  template.py
src/zencoded/web/: __init__.py  app.py  auth.py  models.py
tests/: test_datafile.py  test_downloader.py  test_encoder.py  test_publisher.py  test_releaser.py  test_web.py
