[project]
name = "zencoded"
version = "0.1.0"
description = "Encode files as self-extracting base64 Python scripts, with a cloud service to download URLs and publish the scripts to git."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "pydantic-settings>=2.3",
]

[project.scripts]
zencoded = "zencoded.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zencoded"]

[tool.pytest.ini_options]
testpaths = ["tests"]
